# CSC111SpotifyVis

./: .replit  Charts_Data.csv  FINAL_DATA.csv  SCD_ASCII_2.csv  Spotify Charts Data - Sheet1.csv  Starter.py  Storage.py  Test_set.csv  Test_set_main.csv  data_with_e.csv  main.py  main_data.csv  pyproject.toml  requirements.txt  storage.py  visualization.py
