[tool.poetry]
name = "csc111spotifyvis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
plotly = "5.20.0"
pycountry = "23.12.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
