[tool.poetry]
name = "csc111spotifyvis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
plotly = "5.20.0"
pycountry = "23.12.11"
pandas = "2.2.1"
country-converter = "1.2"
numpy = "^1.26.4"
python-ta = "^2.7.0"
geopandas = "0.14.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
